primitives/api/test/tests/ui/invalid_api_version_3.rs
sp_api::decl_runtime_apis! {
	#[api_version()]
	pub trait Api {
		fn test(data: u64);
	}
}

fn main() {}
